# thesis-gyarmathy-csaba

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  README.md
arduino/: main_code.ino
include/: cnc-controller.hh  edge-detection.hh  g-code.hh
include/util/: file-util.hh  image-util.hh  serial-util.hh
src/: cnc-controller.cpp  edge-detection.cpp  g-code.cpp  ip-project.cpp  main.cpp
src/util/: file-util.cpp  image-util.cpp  serial-util.cpp  serial.cpp
